# TableSched

./: .dockerignore  .gitignore  BRANCHING_STRATEGY.md  Dockerfile  LICENSE.txt  README.md  vercel.json
backend/: .env.example  list_urls.py  manage.py  pyproject.toml
backend/apps/: __init__.py
backend/apps/accounts/: __init__.py  adapters.py  models.py  utils.py
backend/apps/audit/: __init__.py  models.py  services.py
backend/apps/bookings/: __init__.py  models.py  serializers.py  serializers_walkins.py  services.py  urls.py  views.py  views_customer.py  views_walkins.py
backend/apps/common/: __init__.py  authentication.py  codes.py  errors.py  exception_handler.py  log_filters.py  middleware.py  models.py  permissions.py
backend/apps/customers/: __init__.py  models.py  services.py  throttles.py
backend/apps/memberships/: __init__.py  admin.py  middleware.py  models.py
backend/apps/notifications/: __init__.py  i18n.py  models.py  services.py  twilio_client.py  urls.py
backend/apps/payments/: __init__.py  handlers.py  models.py  services.py  urls.py  views.py
backend/apps/restaurants/: __init__.py  models.py  serializers.py  urls.py  views.py
backend/apps/tenants/: __init__.py  admin.py  models.py  urls.py  views.py
backend/config/: urls.py  urls_public.py  wsgi.py
backend/config/settings/: base.py  dev.py  prod.py  test.py
backend/tests/: conftest.py  factories.py  tenant_helpers.py  test_env.py  test_factories.py  test_observability.py  test_prod_settings.py  test_settings.py  test_urls.py
backend/tests/accounts/: __init__.py  conftest.py  (+4 more)
(+260 files in other folders)
